tests/machine/x/ocaml/map_nested_assign.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenmap_nested_assign3567018736/001/map_nested_assign.ml", line 31, characters 53-60:
31 |   print_endline (__show (Obj.obj (List.assoc "inner" Obj.obj (List.assoc "outer" (!data)))));
                                                          ^^^^^^^
Error: This expression has type Obj.t -> 'a
       but an expression was expected of type (string * ('b -> 'c)) list
